# uvlearn

./: .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
src/core/: settings.py  urls.py
src/uvauth/: admin.py  apps.py  models.py
src/uvauth/migrations/: 0001_initial.py
src/uvlearn/: __init__.py
